UY-1561 update to fixed samly2, update to changed API